--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Administrator\AppData\Local\Temp\1\testng-eclipse-1333363958\testng-customsuite.xml</span>
+                    <span>C:\Users\Administrator\AppData\Local\Temp\1\testng-eclipse-1594413314\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Administrator\AppData\Local\Temp\1\testng-eclipse-1333363958\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Administrator\AppData\Local\Temp\1\testng-eclipse-1594413314\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -188,7 +188,7 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'VerifyTransferActionServiceOrder')
 data.setCell(0, 2, 'com.NexusPortalAutomation.TestCases.Java.TC0053_VerifyGlobalOptions_pagetitle')
-data.setCell(0, 3, 12436);
+data.setCell(0, 3, 12592);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -207,52 +207,55 @@ return data;
             <div class="reporter-method-div">
               <span class="reporter-method-name">VerifyTransferActionServiceOrder</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output">Deleting Records for ServiceOrder = </span>
-                <span class="reporter-method-output">Angular Request Completed in 54ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (dd452a4dfd06c222b21c1efe68c32116)] -> id: username] displayed in 89ms</span>
+                <span class="reporter-method-output">Deleting Records for ServiceOrder = SORD00000004982</span>
+                <span class="reporter-method-output">Deleting Records for Location =  LOC@0004</span>
+                <span class="reporter-method-output">Angular Request Completed in 83ms</span>
+                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (1072249b37230f35d7936469049c8d08)] -> id: username] displayed in 69ms</span>
                 <span class="reporter-method-output">Login Page title Verified</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (dd452a4dfd06c222b21c1efe68c32116)] -> id: username] displayed in 29ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (dd452a4dfd06c222b21c1efe68c32116)] -> id: password] displayed in 42ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (dd452a4dfd06c222b21c1efe68c32116)] -> id: kc-login] displayed in 40ms</span>
-                <span class="reporter-method-output">Angular Request Completed in 31ms</span>
+                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (1072249b37230f35d7936469049c8d08)] -> id: username] displayed in 26ms</span>
+                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (1072249b37230f35d7936469049c8d08)] -> id: password] displayed in 31ms</span>
+                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (1072249b37230f35d7936469049c8d08)] -> id: kc-login] displayed in 34ms</span>
+                <span class="reporter-method-output">Angular Request Completed in 16ms</span>
                 <span class="reporter-method-output">User signed Admin</span>
                 <span class="reporter-method-output">Enter Text for Search =LOC@0004</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (dd452a4dfd06c222b21c1efe68c32116)] -> id: SRCH_Input] displayed in 74ms</span>
-                <span class="reporter-method-output">Angular request time 15ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (dd452a4dfd06c222b21c1efe68c32116)] -> id: SRCH_Option_1_Address_Line] displayed in 663ms</span>
+                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (1072249b37230f35d7936469049c8d08)] -> id: SRCH_Input] displayed in 118ms</span>
+                <span class="reporter-method-output">Angular request time 23ms</span>
+                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (1072249b37230f35d7936469049c8d08)] -> id: SRCH_Option_1_Address_Line] displayed in 644ms</span>
                 <span class="reporter-method-output">Click Customer</span>
-                <span class="reporter-method-output">Angular request time 314ms</span>
-                <span class="reporter-method-output">Angular request time 11ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (dd452a4dfd06c222b21c1efe68c32116)] -> id: 'LOC_Location_Id'] displayed in 96ms</span>
-                <span class="reporter-method-output">Angular request time 9ms</span>
+                <span class="reporter-method-output">Angular request time 610ms</span>
+                <span class="reporter-method-output">Angular request time 36ms</span>
+                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (1072249b37230f35d7936469049c8d08)] -> id: 'LOC_Location_Id'] displayed in 54ms</span>
+                <span class="reporter-method-output">Angular request time 7ms</span>
                 <span class="reporter-method-output">got Text CustomerLocId = LOC@0004</span>
                 <span class="reporter-method-output">Customer Location Id found LOC@0004</span>
                 <span class="reporter-method-output">Strings Matched: LOC@0004 = LOC@0004</span>
-                <span class="reporter-method-output">Angular request time 12ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (dd452a4dfd06c222b21c1efe68c32116)] -> id: USR_Name] displayed in 54ms</span>
-                <span class="reporter-method-output">Angular request time 13ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (dd452a4dfd06c222b21c1efe68c32116)] -> id: ACTION_Global_Options] displayed in 66ms</span>
-                <span class="reporter-method-output">Angular request time 15ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (dd452a4dfd06c222b21c1efe68c32116)] -> xpath: /html/body/wo-root/wo-dashboard/csm-global-options/div/header/div[1]] displayed in 78ms</span>
+                <span class="reporter-method-output">Angular request time 9ms</span>
+                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (1072249b37230f35d7936469049c8d08)] -> id: USR_Name] displayed in 37ms</span>
+                <span class="reporter-method-output">Angular request time 9ms</span>
+                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (1072249b37230f35d7936469049c8d08)] -> id: ACTION_Global_Options] displayed in 47ms</span>
+                <span class="reporter-method-output">Angular request time 14ms</span>
+                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (1072249b37230f35d7936469049c8d08)] -> xpath: /html/body/wo-root/wo-dashboard/csm-global-options/div/header/div[1]] displayed in 49ms</span>
                 <span class="reporter-method-output">Strings Matched: Global Options = Global Options</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (dd452a4dfd06c222b21c1efe68c32116)] -> xpath: /html/body/wo-root/wo-dashboard/csm-global-options/div/div/div/div/mat-expansion-panel/div/div/p[1]] displayed in 52ms</span>
+                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (1072249b37230f35d7936469049c8d08)] -> xpath: /html/body/wo-root/wo-dashboard/csm-global-options/div/div/div/div/mat-expansion-panel/div/div/p[1]] displayed in 90ms</span>
                 <span class="reporter-method-output">Strings Matched: Contact Log = Contact Log</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (dd452a4dfd06c222b21c1efe68c32116)] -> xpath: /html/body/wo-root/wo-dashboard/csm-global-options/div/div/div/div/mat-expansion-panel/div/div/p[2]] displayed in 68ms</span>
+                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (1072249b37230f35d7936469049c8d08)] -> xpath: /html/body/wo-root/wo-dashboard/csm-global-options/div/div/div/div/mat-expansion-panel/div/div/p[2]] displayed in 41ms</span>
                 <span class="reporter-method-output">Strings Matched: Transfer Request = Transfer Request</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (dd452a4dfd06c222b21c1efe68c32116)] -> xpath: /html/body/wo-root/wo-dashboard/csm-global-options/div/header/div[2]/div] displayed in 47ms</span>
-                <span class="reporter-method-output">Angular request time 48ms</span>
-                <span class="reporter-method-output">Angular request time 19ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (dd452a4dfd06c222b21c1efe68c32116)] -> id: USR_Name] displayed in 52ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (dd452a4dfd06c222b21c1efe68c32116)] -> id: USR_Name] displayed in 47ms</span>
-                <span class="reporter-method-output">Angular request time 12ms</span>
+                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (1072249b37230f35d7936469049c8d08)] -> xpath: /html/body/wo-root/wo-dashboard/csm-global-options/div/div/div/form/h3] displayed in 59ms</span>
+                <span class="reporter-method-output">Strings Matched: Contact Log = Contact Log</span>
+                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (1072249b37230f35d7936469049c8d08)] -> xpath: /html/body/wo-root/wo-dashboard/csm-global-options/div/header/div[2]/div] displayed in 41ms</span>
+                <span class="reporter-method-output">Angular request time 94ms</span>
+                <span class="reporter-method-output">Angular request time 11ms</span>
+                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (1072249b37230f35d7936469049c8d08)] -> id: USR_Name] displayed in 40ms</span>
+                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (1072249b37230f35d7936469049c8d08)] -> id: USR_Name] displayed in 56ms</span>
+                <span class="reporter-method-output">Angular request time 9ms</span>
                 <span class="reporter-method-output">Click Logged User Link</span>
-                <span class="reporter-method-output">Angular request time 12ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (dd452a4dfd06c222b21c1efe68c32116)] -> id: ACTION_Logout] displayed in 64ms</span>
-                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (dd452a4dfd06c222b21c1efe68c32116)] -> id: ACTION_Logout] displayed in 42ms</span>
-                <span class="reporter-method-output">Angular request time 23ms</span>
+                <span class="reporter-method-output">Angular request time 8ms</span>
+                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (1072249b37230f35d7936469049c8d08)] -> id: ACTION_Logout] displayed in 53ms</span>
+                <span class="reporter-method-output">Element [[ChromeDriver: chrome on XP (1072249b37230f35d7936469049c8d08)] -> id: ACTION_Logout] displayed in 66ms</span>
+                <span class="reporter-method-output">Angular request time 39ms</span>
                 <span class="reporter-method-output">Click logout Link</span>
-                <span class="reporter-method-output">Angular request time 23ms</span>
-                <span class="reporter-method-output">Angular request time 13ms</span>
+                <span class="reporter-method-output">Angular request time 9ms</span>
+                <span class="reporter-method-output">Angular request time 7ms</span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -272,16 +275,16 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.NexusPortalAutomation.TestCases.Java.TC0053_VerifyGlobalOptions_pagetitle</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">readProp(org.testng.TestRunner@5eeedb60)</span>
+                <span class="method-name">readProp(org.testng.TestRunner@5f84abe8)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">VerifyTransferActionServiceOrder</span>
-                <span class="method-start">3829 ms</span>
+                <span class="method-start">3800 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">TearDown</span>
-                <span class="method-start">16267 ms</span>
+                <span class="method-start">16396 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
