--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7cd7a0">  <td>20/01/06 07:58:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:com.NexusPortalAutomation.TestCases.Java.TC0053_VerifyGlobalOptions_pagetitle@198b6731]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@961409111</td>   <td></td> </tr>
-<tr bgcolor="77a679">  <td>20/01/06 07:58:23</td>   <td>-12596</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0053_VerifyGlobalOptions_pagetitle.VerifyTransferActionServiceOrder()[pri:1, instance:com.NexusPortalAutomation.TestCases.Java.TC0053_VerifyGlobalOptions_pagetitle@198b6731]">VerifyTransferActionServiceOrder</td> 
-  <td>main@961409111</td>   <td></td> </tr>
-<tr bgcolor="7cd7a0">  <td>20/01/06 07:58:20</td>   <td>-16389</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.readProp(org.testng.ITestContext)[pri:0, instance:com.NexusPortalAutomation.TestCases.Java.TC0053_VerifyGlobalOptions_pagetitle@198b6731]">&gt;&gt;readProp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@961409111</td>   <td></td> </tr>
+<tr bgcolor="7161c7">  <td>20/01/08 11:13:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TearDown()[pri:0, instance:com.NexusPortalAutomation.TestCases.Java.TC0007_TestSummarySection@692f203f]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1770642014</td>   <td></td> </tr>
+<tr bgcolor="77a679">  <td>20/01/08 11:13:18</td>   <td>-19319</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0007_TestSummarySection.TestSummarySectionOnChange()[pri:2, instance:com.NexusPortalAutomation.TestCases.Java.TC0007_TestSummarySection@692f203f]">TestSummarySectionOnChange</td> 
+  <td>main@1770642014</td>   <td></td> </tr>
+<tr bgcolor="7161c7">  <td>20/01/08 11:13:14</td>   <td>-23053</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.readProp(org.testng.ITestContext)[pri:0, instance:com.NexusPortalAutomation.TestCases.Java.TC0007_TestSummarySection@692f203f]">&gt;&gt;readProp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1770642014</td>   <td></td> </tr>
 </table>
