--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,57 +1,34 @@
-<h2>Reporter output</h2><table><tr><td>Value for Key 'locationID' found from sheet =LOC@0004</td></tr>
-<tr><td>Value for Key 'defaultCustomer' found from sheet =Mr. VACANT VACANT</td></tr>
-<tr><td>Value for Key 'moveInCustomer' found from sheet =Mr. Vacant Vacant</td></tr>
-<tr><td>Launching Chrome</td></tr>
+<h2>Reporter output</h2><table><tr><td>Launching Chrome</td></tr>
 <tr><td>Browser Maximised</td></tr>
-<tr><td>Deleting Records for ServiceOrder = SORD00000004982</td></tr>
-<tr><td>Deleting Records for Location =  LOC@0004</td></tr>
-<tr><td>Angular Request Completed in 83ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1072249b37230f35d7936469049c8d08)] -> id: username] displayed in 69ms</td></tr>
+<tr><td>Angular Request Completed in 77ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (dac77c4a99c0d853e9fb171ed28d201a)] -> id: username] displayed in 86ms</td></tr>
 <tr><td>Login Page title Verified</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1072249b37230f35d7936469049c8d08)] -> id: username] displayed in 26ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1072249b37230f35d7936469049c8d08)] -> id: password] displayed in 31ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1072249b37230f35d7936469049c8d08)] -> id: kc-login] displayed in 34ms</td></tr>
-<tr><td>Angular Request Completed in 16ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (dac77c4a99c0d853e9fb171ed28d201a)] -> id: username] displayed in 25ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (dac77c4a99c0d853e9fb171ed28d201a)] -> id: password] displayed in 31ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (dac77c4a99c0d853e9fb171ed28d201a)] -> id: kc-login] displayed in 38ms</td></tr>
+<tr><td>Angular Request Completed in 22ms</td></tr>
 <tr><td>User signed Admin</td></tr>
-<tr><td>Enter Text for Search =LOC@0004</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1072249b37230f35d7936469049c8d08)] -> id: SRCH_Input] displayed in 118ms</td></tr>
-<tr><td>Angular request time 23ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1072249b37230f35d7936469049c8d08)] -> id: SRCH_Option_1_Address_Line] displayed in 644ms</td></tr>
+<tr><td>Element '//input[@id='SRCH_Input']' is displayed in 75ms</td></tr>
+<tr><td>Element 'toolbar-saved' is displayed in 47ms</td></tr>
+<tr><td>Angular Request Completed in 8ms</td></tr>
+<tr><td>Enter Text for Search =Automation</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (dac77c4a99c0d853e9fb171ed28d201a)] -> id: SRCH_Input] displayed in 54ms</td></tr>
+<tr><td>Angular request time 16ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (dac77c4a99c0d853e9fb171ed28d201a)] -> id: SRCH_Option_1_Address_Line] displayed in 723ms</td></tr>
 <tr><td>Click Customer</td></tr>
-<tr><td>Angular request time 610ms</td></tr>
-<tr><td>Angular request time 36ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1072249b37230f35d7936469049c8d08)] -> id: 'LOC_Location_Id'] displayed in 54ms</td></tr>
-<tr><td>Angular request time 7ms</td></tr>
-<tr><td>got Text CustomerLocId = LOC@0004</td></tr>
-<tr><td>Customer Location Id found LOC@0004</td></tr>
-<tr><td>Strings Matched: LOC@0004 = LOC@0004</td></tr>
-<tr><td>Angular request time 9ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1072249b37230f35d7936469049c8d08)] -> id: USR_Name] displayed in 37ms</td></tr>
-<tr><td>Angular request time 9ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1072249b37230f35d7936469049c8d08)] -> id: ACTION_Global_Options] displayed in 47ms</td></tr>
-<tr><td>Angular request time 14ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1072249b37230f35d7936469049c8d08)] -> xpath: /html/body/wo-root/wo-dashboard/csm-global-options/div/header/div[1]] displayed in 49ms</td></tr>
-<tr><td>Strings Matched: Global Options = Global Options</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1072249b37230f35d7936469049c8d08)] -> xpath: /html/body/wo-root/wo-dashboard/csm-global-options/div/div/div/div/mat-expansion-panel/div/div/p[1]] displayed in 90ms</td></tr>
-<tr><td>Strings Matched: Contact Log = Contact Log</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1072249b37230f35d7936469049c8d08)] -> xpath: /html/body/wo-root/wo-dashboard/csm-global-options/div/div/div/div/mat-expansion-panel/div/div/p[2]] displayed in 41ms</td></tr>
-<tr><td>Strings Matched: Transfer Request = Transfer Request</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1072249b37230f35d7936469049c8d08)] -> xpath: /html/body/wo-root/wo-dashboard/csm-global-options/div/div/div/form/h3] displayed in 59ms</td></tr>
-<tr><td>Strings Matched: Contact Log = Contact Log</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1072249b37230f35d7936469049c8d08)] -> xpath: /html/body/wo-root/wo-dashboard/csm-global-options/div/header/div[2]/div] displayed in 41ms</td></tr>
-<tr><td>Angular request time 94ms</td></tr>
+<tr><td>Angular request time 343ms</td></tr>
+<tr><td>Element '//div[@class='address-details']' is displayed in 120ms</td></tr>
+<tr><td>Angular request time 67ms</td></tr>
+<tr><td>Element [[ChromeDriver: chrome on XP (dac77c4a99c0d853e9fb171ed28d201a)] -> id: CUST_First_Last_Name] displayed in 52ms</td></tr>
 <tr><td>Angular request time 11ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1072249b37230f35d7936469049c8d08)] -> id: USR_Name] displayed in 40ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1072249b37230f35d7936469049c8d08)] -> id: USR_Name] displayed in 56ms</td></tr>
+<tr><td>got Text Customer Name = Automation Mate</td></tr>
+<tr><td>Customer Name found Automation Mate</td></tr>
+<tr><td>Strings Matched: Automation Mate = Automation Mate</td></tr>
 <tr><td>Angular request time 9ms</td></tr>
-<tr><td>Click Logged User Link</td></tr>
-<tr><td>Angular request time 8ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1072249b37230f35d7936469049c8d08)] -> id: ACTION_Logout] displayed in 53ms</td></tr>
-<tr><td>Element [[ChromeDriver: chrome on XP (1072249b37230f35d7936469049c8d08)] -> id: ACTION_Logout] displayed in 66ms</td></tr>
-<tr><td>Angular request time 39ms</td></tr>
-<tr><td>Click logout Link</td></tr>
-<tr><td>Angular request time 9ms</td></tr>
-<tr><td>Angular request time 7ms</td></tr>
+<tr><td>Element 'BILL_Current_Balance' is displayed in 61ms</td></tr>
+<tr><td>Element 'BILL_Unposted_Balance' is displayed in 68ms</td></tr>
+<tr><td>Element 'BILL_Account_Balance' is displayed in 61ms</td></tr>
+<tr><td>Element 'BILL_Past_Due' is displayed in 74ms</td></tr>
 <tr><td>Closing Browser</td></tr>
 <tr><td>Test Completed...</td></tr>
 </table>
